[REFACTOR]: ️ 기존 DevLog 도메인 제거 (#69)
* [REFACTOR]: DevLog 엔티티 제거

* [REFACTOR]: Schedule, User 에서 DevLog 의존성 제거

* [REFACTOR]: DevLogRepository 제거

* [REFACTOR]: ScheduleService의 DevLog 생성, 수정, 삭제 로직 제거

* [REFACTOR]: AddChatResponse 제거

* [REFACTOR]: ScheduleDto에서 ChatDto 분리

* [REFACTOR]: 서비스 로직 변경